# hedging-dataflow

./: .gitignore  .prefectignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
blocks/secret/: secret_export.py  secret_import.py  secret_list.py
blocks/storage/: storage_hedge_pnl.py
blocks/string/: string_export.py  string_import.py  string_list.py
common/: ftx_client.py  utils.py
deployments/: deploy_all_data.py  deploy_ctrader_token_refresh.py  deploy_drop_table.py  deploy_hedge_data.py  deploy_pps_token.py
flows/: flow_all_data.py  flow_binance_data.py  flow_ctrader_agg_pos.py  flow_ctrader_token_refresh.py  flow_db.py  flow_dot_data.py  flow_drop_table.py  flow_ftx_data.py  flow_ftx_dot_cost.py  flow_ftx_dot_market_price.py  flow_hedge_data.py  flow_ledger_dot_balance.py  flow_pps_data.py  flow_test.py
scripts/: deploy.sh  prefect-agent.service  prefect.service  start_hedge_agent.sh  start_prefect.sh
tasks/: task_binance.py  task_db.py  task_derived.py  task_dot.py  task_ftx.py  task_pps.py
